/*
 * $Id: ChangeLog,v 1.5396 2007/03/21 10:15:50 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-21 12:00 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * config/global.cf
    + added bmdbfcdx path

2007-03-21 09:45 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * include/hbcomp.h
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/compiler/hbusage.c
    - eliminate compiler flag -roff (reserved off).
    
2007-03-20 07:50 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/set.c
    * restored hb_set.HB_SET_APPENDERROR = FALSE to default behavior.
    * fixed to allow use SET( _SET_ERRORLOG,,.T.), without second argument,
      at this case the second argument will be "error.log" as before.
  * source/rtl/errorsys.prg
    * minor fix to show the two values of Set( _SET_ERRORLOG ) in
      environmental session.

2007-03-19 08:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/errorsys.prg
    ! fixed to don't call ct.lib functions. This lib isn't used by default
      on any hb.. utils in all makefiles.

2007-03-19 09:25 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * harbour/source/rdd/bmdbfcdx/bmdbfcdx1.c
    * minor warning corrected.

2007-03-18 00:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/set.c
    * changed hb_set.HB_SET_APPENDERROR = TRUE by default to generate the
      error.log in append mode instead create new one for each runtime error,
      at this way we will have a historic of all errors. 

  * source/rtl/errorsys.prg
    * changes in LogError() function:
    * changed title from "Error log file" to "xHarbour error log file"
    + added more info to header session as netname(), disktotal(), diskfree(),